# LR7

All_Tasks/: CMakeLists.txt  LR7.cpp  func_1  func_1.cpp  func_1.h  func_2  func_2.cpp  func_2.h  func_3  func_3.cpp  func_3.h  func_4.cpp  func_4.h  func_5  func_5.cpp  func_5.h
